Fixed info tex for srp

--- a/SRP/Info.tex
+++ b/SRP/Info.tex
@@ -101,22 +101,21 @@
     \setcounter{page}{1}    % Sætter rigtigt sidetal på første side
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Introduktion}
-    Dette dokument er lavet til de gymnasieelever der er tilmeldt
-    SRP/databehandlings workshop på Datalogisk Institut Københavns Universitet.
+    Dette dokument er lavet til de gymnasieelever, der er tilmeldt
+    SRP-/databehandlings workshop på Datalogisk Institut Københavns Universitet.
 
-    Vi glæder os meget til at få jer på besøg, denne PDF indeholder praktisk
-    information og en installations guide for at vi kan få en rigtig god
-    dag vil vi gerne bede jer om at installere følgende programmer på jeres
-    computere så i er klar til at lære LaTeX fra starten.
+    Vi glæder os meget til at få jer på besøg. Denne PDF indeholder praktisk
+    information og en installationsguide. For at vi kan få en rigtig god
+    dag sammen, vil vi gerne bede jer om at installere nogle programmer på jeres computere, så I er klar til at lære LaTeX fra starten.
 
 
 \section{Praktisk information}
     Workshoppen finder sted i HCØ bygningen, hvor der vil være forelæsning i
-    auditorie 10 og øvelser i de omliggende  lokaler.
+    auditorium 10 og øvelser i de omliggende  lokaler.
 
     Adressen er Universitetsparken 5, 2100 København.
-    Optil kl 10.00 vil der tå en til at tage imod jer og vise hen til
-    auditoriet ved den indgang der er markeret på kortet.
+    Op til kl 10.00 vil der være en til at tage imod, og vise jer hen til
+    auditoriet ved indgangen markeret på kortet.
     \begin{figure}[h!]
         \caption{Hovedindgang til HCØ}
         \centering
@@ -125,7 +124,7 @@
 
     \subsection{Program for mandag}
     \begin{description}
-        \item[kl 10.00-12.00] | Velkomst og Forelæsning ~ \\
+        \item[kl 10.00-12.00] | Velkomst og forelæsning ~ \\
         Vi starter med velkomst og en forelæsning om LaTeX.
         Forelæsningen vil give en introduktion til hvad LaTeX er, hvordan det
         fungerer, og hvilke fordele det har over programmer som Word.
@@ -139,18 +138,17 @@
 		$$1+1$$
 
         \item[12.45 - 15.00] | Øvelser ~ \\
-        Til øvelserne vil i blive givet en print lavet i LaTeX med forskellige
+        Til øvelserne vil i blive givet et print lavet i LaTeX med forskellige
         formler, tabeller, og figurer. Jeres opgave vil så være at genskabe
-        dette dokument i LaTeX, efterfulgt af en gennemgang på projektoren.
+        dette dokument i LaTeX. Vi samler op med en gennemgang på projektoren.
     \end{description}
-
 
     \subsection{Program for tirsdag}
     \begin{description}
-        \item[kl 10.00-12.00] | Opsamling fra mandag og Øvelser ~ \\
-        Tirsdag vil vi starte med at vise hvordan LaTeX brillerer særligt
+        \item[kl 10.00-12.00] | Opsamling fra mandag og øvelser ~ \\
+        Tirsdag vil vi starte med at vise, hvordan LaTeX brillerer særligt
         ved større rapporter. Herefter vil vi gerne bede jer om at tage en af
-        jeres egne afleveringer med som i så skal ``TeXe''.
+        jeres egne afleveringer med, som i så skal ``TeXe''.
 
         \item[kl 12.00-12.45] | Pause ~ \\
        $$ 1+ 1$$
@@ -160,47 +158,46 @@
 		$$1+1$$
 
         \item[12.45 - 15.00] | Intro til databehandling ~ \\
-        Vi vil holde en forelæsning hvor vi demonstrer forskellige databehandlings
-        værktøjer og hvordan de sammenarbejder med LaTeX.
+        Vi vil holde en forelæsning, hvor vi demonstrerer forskellige databehandlings
+        værktøjer, samt hvordan de sammenarbejder med LaTeX.
     \end{description}
 
-\section{Installations guide}
-    For at køre LaTex kræver det to programmer.
-    Det ene program er selve LaTeX ``motoren'' der bygger selve Pdf'en
-    det andet program er en LaTeX editor der kan skrive den fil LaTeX skal bygge
+\section{Installationsguide}
+    Det kræver to programmer at køre LaTeX.
+    Det ene program er selve LaTeX-``motoren'' der bygger pdf'en.
+    Det andet program er en LaTeX editor, hvori man skriver filen, som LaTeX skal bygge
     fra.
 
-    \subsection{LaTeX motor}
-    Følg disse trin for at installere LaTeX motoren.
+    \subsection{LaTeX-motor}
+    Følg disse trin for at installere LaTeX-motoren.
 
     \begin{itemize}
-        \item Download installations filen
+        \item Download installationsfilen
         \footnote{Vi anbefaler at man tager en kop kaffe mens den downloades}. \\
-        Mac brugere skal hente denne installations fil
+        Mac-brugere skal hente denne installations fil
         \begin{quote}
          http://tug.org/cgi-bin/mactex-download/MacTeX.pkg
         \end{quote}
 
-        Windows brugere skal hente denne lille fil, som så henter en stor ned.
+        Windows-brugere skal hente denne lille fil, som så henter en stor fil ned.
         \begin{quote}
         http://mirror.ctan.org/systems/texlive/tlnet/install-tl-windows.exe
         \end{quote}
 
-        \item Dobbeltklik den fil i downloaded. Så disse vinduer åbner.
+        \item Dobbeltklik den downloadede fil, således at disse nedenstående vinduer åbner.
 		\begin{figure}[h]
     		\centering
     		\subfloat[Mac brugere]{{\includegraphics[width=6cm]{mac1.png}}}%
 	    	\qquad
 	    	\subfloat[Windows brugere]{{\includegraphics[width=6cm]{windows1.png} }}%
-		    \caption{2 Figures side by side}%
+		    \caption{Installations vinduerne}%
 		\end{figure}\\
         Mac brugere skal forsætte med at trykke på ``continue'' indtil programmet
         er installeret. 
         
         
-        Windows brugere skal vælge "simpel install" og trykke ``next'', og
-        sikre at alle indstillinger passer med dem der vises på nedenstående
-        figur og trykke ``install''.
+        Windows brugere skal vælge "simple install" og trykke ``next''. Vær sikker på at alle indstillinger passer med dem der vises på nedenstående
+        figur. Afslut installationen af din LaTeX-motor ved at trykke ``install''.
         \begin{figure}[h!]
             \caption{Indstillinger for windows}
             \centering
@@ -211,15 +208,15 @@
 		 
         \subsection{Latex Editor}
         Det program vi bruger til at interagere med LaTeX motoren hedder
-        ``TeXMaker'' Hent installations filen her
+        ``TeXMaker''. Hent installationsfilen her
             \begin{quote}
             Mac : http://www.xm1math.net/texmaker/TexmakerMacosxLion.zip  \\
             Windows : http://www.xm1math.net/texmaker/texmakerwin32\_install.exe
             \end{quote}
 
-        Mac brugere skal udpakke zip filen ved at dobbelt trykke på den og
-        flytte programmet ind i deres ``Applications'' mappe. \\
-        Windows brugere skal dobbelt trykke på filen og vælge install. 
+        Mac-brugere skal udpakke zip filen ved at dobbeltklikke på den og
+        flytte programmet ind i deres ``Applications'' mappe.
+        Windows-brugere skal dobbeltklikke på filen og vælge install. 
    		\begin{figure}%
     		\centering
     		\subfloat[Mac brugere]{{\includegraphics[width=5cm]{texMove.png}}}%
@@ -228,12 +225,12 @@
 		\end{figure}
 	
 	I mangler nu kun at installere dansk ordbog i LaTex. 
-	Dette gøres ved at hente denne zip fil og udpakke den til et passende sted
-	på jers computer.
+	Dette gøres ved at hente denne zip fil, og udpakke den til et passende sted
+	på jeres computer.
 	$$
 		http://rotendahl.dk/da\_DK.zip 
 	$$		
-	Herefter går i ind i indstillingere i TexMaker og vælger den fil i 
+	Herefter går i ind i indstillingere i TexMaker, og vælger den fil i 
 	lige har udpakket. 
 	Indlæs så den danske ordbog ved at vælge den som vist i billedet. 
 	\begin{figure}[h!]
@@ -243,9 +240,9 @@
     \end{figure}
 	
 	\section{Outro}
-	Du har nu installeret alt og er klar til workshoppen, 
-	hvis du allerede nu er lidt nysggerig på hvad det du har installeret 
-	kan bruges til så kan du hente dette dokument på 	og se hvordan det er skrevet.  \\ Vi glæder os til at se jer den 12. 
+	Du har nu installeret alt og er klar til workshoppen. 
+	Hvis du allerede nu er lidt nysgerrig på, hvad det som du har installeret 
+	kan bruges til, så kan du hente følgnede dokument og se hvordan det er skrevet.  \\ Vi glæder os til at se jer den 12.! 
 		$$
 		http://rotendahl.dk/eks-tex.zip 
 	$$
