--- a/SRP/Latex/skabelon.tex
+++ b/SRP/Latex/skabelon.tex
@@ -3,7 +3,7 @@
 %%%%%%%%%%%%%%%%%%
 % Pakker/macroer %
 %%%%%%%%%%%%%%%%%%
-\usepackage{amssymb,latexsym,amsmath} % Standard pakker
+\usepackage{amssymb,latexsym,amsmath,graphicx} % Standard pakker
 \usepackage[utf8]{inputenc} % Gør så unicode-karakterer kan benyttes
 \usepackage{multirow} % Gør det muligt at benytte multirows i tabeller
 \renewcommand{\tablename}{Tabel} % Fix caption på tabeller til at være på dansk
