--- a/SRP/Latex/skabelon.tex
+++ b/SRP/Latex/skabelon.tex
@@ -27,9 +27,11 @@
 %%%%%%%%%%%%
 % Dokument %
 %%%%%%%%%%%%
-
 \begin{document}
 
-\tableofcontents
+\title{Kopier denne \LaTeX ~fil!}
+\author{Arinbjörn, Benjamin \& Mathias}
+\date{12. oktober, 2015}
 
+\maketitle
 \end{document}
