Updated folder to gym

--- a/kulturnat/folder.tex
+++ b/kulturnat/folder.tex
@@ -122,14 +122,12 @@
 \pagenumbering{gobble}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Introduktion}
-Tak for et godt besøg på kulturnatten hos Datalogisk Institut ved Københavns Universitet (DIKU). Vi håber at du gik herfra med en masse ny viden! Hvis du synes, at det lød spændende, har vi her samlet noget information.
+Tak for 3 gode dage i studiepraktik på Datalogisk Institut ved Københanvs Universitet (DIKU). Vi håber at du gik herfra med en masse ny viden! Hvis du synes, at det lød spændende, har vi her samlet noget information. Vi håber selvfølgelig at se jer alle sammen til næste studiestart!
 
 \section{DIKU}
 \begin{description}
     \item[Besøg fra DIKU]~\\
         DIKU tilbyder besøg i din gymnasieklasse fra rejseholdet; enten med et kort oplæg om de sociale og faglige aspekter ved uddannelsen, eller et længerevarende undervisningsforløb. Hvis du er interesseret kan du få din lærer til at skrive en mail til heidi.pa@di.ku.dk.
-    \item[Studiepraktik]~\\
-        Det bliver tre dage fyldt med indsigtsfulde oplæg og spændende opgaver, når DIKU åbner dørene til årets studiepraktik. I, gymnasieeleverne, får muligheden for at opleve datalogien helt tæt på, når I vises rundt i lokalerne.
     \item[Studerende for en dag]~\\
         ’Studerende for en dag’ er et initiativ på SCIENCE, hvor gymnasieelever og andre universitetsaspiranter følger en studerende på et af de naturvidenskabelige fag gennem en hel dag. Her får du altså mulighed for at se en helt almindelig hverdag for en studerende på datalogi. Hvis du er interesseret så kan du lave en aftale på http://www.science.ku.dk/oplev-science/gymnasiet/studerende-for-en-dag/.
 \end{description}
@@ -137,17 +135,13 @@ Tak for et godt besøg på kulturnatten hos Datalogisk Institut ved Københavns 
 \section{Programmering}
 Vil du lære mere om programmering er der her nogle nyttige links.
 \begin{description}
-    \item[Scratch]~\\
-        Scratch er en super intuitiv måde at lave computerprogrammer på. Det er et visuelt programmeringssporg, hvor man bygger sit program som et puslespil. En god guide kan findes her: https://github.com/CodingPirates/Scratch-materiale
     \item[Processing]~\\
         Tekstbaseret programmering, men med øjeblikkeligt visuel respons. En god introduktion til det at programmere. Undervisningsmaterialet er på dansk. \\
         https://da.khanacademy.org/computing/computer-programming/programming
     \item[Codecademy]~\\
-        Hvis du har prøvet kræfter med en af de ovenstående muligheder, og du synes at det var sjovt, så prøv Codecademy. Der er intuitive guides til en masse forskellige programmeringssprog. \\ https://www.codecademy.com/
+        Hvis du har prøvet kræfter med en Processing, og du synes at det var sjovt, så prøv Codecademy. Der er intuitive guides til en masse forskellige programmeringssprog. \\ https://www.codecademy.com/
     \item[Datalogi]~\\
         Harvard University har lavet et fantastisk introduktionskursus til datalogi, som man kan følge i sit eget tempo, hvis man ellers er engelskkyndig. Man lærer her noget datalogi som strækker sig ud over det at programmere. \\
         https://www.edx.org/course/introduction-computer-science-harvardx-cs50x
-
 \end{description}
-
 \end{document}
