--- a/SRP/pr.tex
+++ b/SRP/pr.tex
@@ -193,11 +193,15 @@ bruges til databehandling og værktøjer til at arbejde videre med.
     Tidspunkter &  Mandag & Tirsdag \\
     \hline
     10.00 & Intro til Latex & Workshop \\
-    12.00 & Frokost         & Frokost \\
+    12.00 & Pause           & Pause \\
     12.45 & Workshop        & Intro til databehandling \\
     15.00 & Tak for idag    & Tak for idag \\
 \end{tabular}
 \end{center}
 }
+
+\section*{Tilmelding}
+Lyder det som noget for dig? Så skriv en mail til Bero@di.ku.dk og sig du vil være med
+
 
 \end{document}
