updated title in notebook

--- a/fagpakker/Machine Learning/øvelser/let-øvede.ipynb
+++ b/fagpakker/Machine Learning/øvelser/let-øvede.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python opgaver for begyndere\n",
+    "# Python opgaver for let-øvede\n",
     "## Her er lidt at gå i gang med for dem som har lidt erfaring i programmering\n",
     "#### Sig endelig til hvis I har brug for hjælp! I skal løse opgaverne i rækkefølge.\n",
     "Prøv at indsætte de rigtige værdier og variabler dér hvor de mangler!"
