--- a/fagpakker/Machine Learning/uge3/dataAnalyse.tex
+++ b/fagpakker/Machine Learning/uge3/dataAnalyse.tex
@@ -17,7 +17,7 @@
 \usepackage{algorithm}
 \usepackage{marvosym}
 
-\title{Studiepraktik dag 2}
+\title{Fagpakke dag 3}
 \subtitle{Datanalyse med Machine Learning}
 \author{
         Arinbjörn Brandsson \\
@@ -46,7 +46,8 @@
 
          \begin{block}{ML til undsætning!}
              Vi ønsker istedet at lave systemer sådan at computere kan finde de
-             underliggende mønstre og bruge den viden/erfaring der ligger i data'en
+             underliggende mønstre og bruge den viden/erfaring der ligger i
+             data'en.
          \end{block}
 
          \pause
@@ -66,7 +67,7 @@
              kunne forbedre deres anbefalings algoritme med $10\%$.
          \end{quote}
 
-         \pause
+         \pause{}
 
          \begin{block}{Kan ML bruges?}
              \begin{enumerate}
@@ -75,7 +76,7 @@
                  \item Der er massere af data til rådighed!
              \end{enumerate}
          \end{block}
-         \pause
+         \pause{}
          \centering \emph{ML vandt konkurrencen!}
      \end{frame}
 
@@ -87,54 +88,58 @@
         \end{figure}
     \end{frame}
 
-    \begin{frame}[t]{Dagens \emph{Historie}}
+    \begin{frame}[t]{Dagens opgave}
         \begin{quote}
-            Vi er blevet hyret af Danske Bank da de har hørt at vi dataloger
-            kan tjene dem en masse penge.
+            Vi er blevet hyret af et hospital da de har hørt at vi dataloger
+            kan hjælpe deres patienter.
         \end{quote}
         \pause
         \begin{block}{Problemstilling}
-            Vi skal lave et system der givet data om en kunde og et beløb kan
-            bestemme om det er en god foretning at låne dem de penge.
+            Vi skal lave et system der givet data om en patient kan bestemme
+            om deres svulst er godartet eller ondartet.
         \end{block}
         \pause
         \centering Hmm, det var da et ret generelt problem $\dots$
         \pause
         \begin{block}{Problemstilling}
-            Vi skal lave et system der givet data om en \alert{patient} og
-            \alert{en mængde af Chemo} kan bestemme om det er en god behandling.
+            Vi skal lave et system der givet data om en \alert{kunde} og
+            kan bestemme om det er en god forretning at låne dem penge.
         \end{block}
         \pause
-        \centering Vi koder for kapitalen!
+        \centering Problemet hedder klasseficering, gode løsninger kan have stor
+        indflydelse inden for mange felter.
     \end{frame}
 
 \section{Problemet}
 \frame{\tableofcontents[currentsection]}
     \begin{frame}[c]{Håndtering af input og output}
         \begin{columns}
-            \begin{column}{0.5\textwidth}
+            \begin{column}{0.6\textwidth}
                 \begin{block}{Input}
                     \begin{center}
                         \begin{tabular}{| c | r |}
                             \hline
-                            alder              & 27                \\ \hline
-                            køn                & 1                 \\ \hline
-                            Årlig Løn          & 50.000            \\ \hline
-                            Bopæl              & 2300              \\ \hline
-                            Gæld               & 40.000            \\ \hline
-                            $\vdots$           & $\vdots$          \\ \hline
-                            \alert{Ønsket lån} & \alert{3.000.000} \\ \hline
+                            Threshold                & 1           \\ \hline
+                            Clump Thickness          & 7           \\ \hline
+                            Uniformity of Cell Size  & 1           \\ \hline
+                            Uniformity of Cell Shape & 4           \\ \hline
+                            Epithelial Cell Size     & 2           \\ \hline
+                            Bare Nuclei              & 3           \\ \hline
+                            Bland Chromatin          & 8           \\ \hline
+                            Normal Nucleoli          & 10          \\ \hline
+                            Mitoses                  & 3           \\ \hline
                         \end{tabular}
                     \end{center}
                 \end{block}
+                \vspace{-1em}
                 \begin{block}{Output}
-                    \centering Tjente vi penge?
-                    {\color{KUNATgreen}ja}
+                    \centering Ondartet eller godartet
+                    {\color{KUNATgreen}1}
                 \end{block}
             \end{column}
             \pause
 
-            \begin{column}{0.2\textwidth}
+            \begin{column}{0.1\textwidth}
                 \vspace{4em}
                 \begin{Huge}
                     $$
@@ -147,17 +152,20 @@
                     $$
                         \left(
                         \begin{tabular}{c}
-                            27      \\
                             1      \\
-                            50.000 \\
-                            2300   \\
-                            40.000 \\
-                            \vdots \\
-                            3.000.000
+                            7      \\
+                            1      \\
+                            4      \\
+                            2      \\
+                            3      \\
+                            8      \\
+                            10     \\
+                            3
                         \end{tabular}
                         \right)
                     $$
                 \end{block}
+                \vspace{-1em}
                 \begin{block}{Output}
                     1
                 \end{block}
@@ -168,8 +176,8 @@
     \begin{frame}[t]{Formalisering}
         \begin{block}{Termer}
             \begin{description}
-                \item[Input] En vektor (Lån ansøgning)  \pause
-                \item[Output] $1$ eller $-1$ (God eller dårlig forretning) \pause
+                \item[Input] En vektor (patient data)  \pause
+                \item[Output] $1$ eller $-1$ (ondartet eller godartet) \pause
                 \item[Læringsmål]$\mathcal{F}: \mathcal{X} \rightarrow
                                    \mathcal{Y}$ \pause
                 \item[Data] $(x_1,y_1), (x_2,y_2),\dots,(x_n,y_n)$
@@ -222,8 +230,8 @@
             Vi lader $w$ være vores ``vægt-vektor''. \pause
             \vspace{-1em}
             \begin{flalign*}
-                \text{Godkend lån hvis : } \sum_{i=1}^d w_i x_i &> b \\
-                \text{Afvis   lån hvis : } \sum_{i=1}^d w_i x_i &< b
+                \text{Godartet svulst : } \sum_{i=1}^d w_i x_i &> b \\
+                \text{Ondartet svulst : } \sum_{i=1}^d w_i x_i &< b
             \end{flalign*}
             \pause
             \vspace{-1em}
@@ -241,7 +249,7 @@
             \pause
             $$w = \text{ vælg tilfæledige tal}$$
             \pause
-            Vi forbederer $w$ hver gang!\\ \pause
+            Vi forbedrer $w$ hver gang!\\ \pause
             Hvis $x'$ er på den forkerte side af $w$ så lærer den ``erfaringen''
             ved formlen \pause
             $$
@@ -257,7 +265,7 @@
         \begin{block}{Pseduocode}
         \vspace{-1.5em}
         \begin{algorithm}[H]
-            \caption{\newline Input: datasæt $X=[(x_1,y_1),\dots, (x_n,y_n)$
+            \caption{\newline Input: datasæt $X=[(x_1,y_1),\dots, (x_n,y_n)]$
                      \newline Output: Hypotesen $w$.
             }
             \begin{algorithmic}
@@ -289,26 +297,42 @@
             Nogen der kan gætte køretiden? \pause
             $$
                 O(2^{(n+1) log(n+1)} (n + 1)^2)
-                $$
-                Tjener vi så nogle penge eller redder nogle liv?
+            $$
                 \pause
-                Det kan jeg ikke svare på \Frowny{}
+                Redder vi så nogle liv?
+                \pause
+                Lad os kode det og se hvor god den er!
             \end{block}
     \end{frame}
 
     \begin{frame}[t]{Afslutning}
-    \begin{block}{Fejl i min simulering}
-        \begin{figure}[h!]
-            \centering
-            \includegraphics[width=1\textwidth]{include/histperc.png}
-        \end{figure}
+    \begin{block}{Hvor god er den? }
+        I opgaverne kigger i kun på alert{25 eksempler!} og tester på 75
+        patienter \\
+        \pause
+        I kan forvente at den har ret på cirka $60-70\%$ af patienterne!.
+        \pause
+        Kører man den istedet med 500 eksempler og tester på 180. \pause
+        Rammer den rigtigt 181 gange og forkert 2 gange. Det betyder at den
+        har en succes rate på \alert{$98,9\%$!}
     \end{block}
     \pause
     \centering Spørgsmål?\\
-    \pause
-    Har jeg tid til mere?
     \end{frame}
 
+    \begin{frame}[c]{Evaluering}
+    \begin{block}{Facebook grupper}
+        \centering
+        https://www.facebook.com/DIKUDatalogi/ \\
+        https://www.facebook.com/groups/Datalogi.I.Gymnasiet
+    \end{block}
+    \pause
+    \begin{block}{Evaluerings skema}
+        \centering
+        http://rotendahl.dk/eval
+    \end{block}
+    \pause Tak for denne gang! (Vi ses på DIKU)
+    \end{frame}
 
 
 \end{document}
