--- a/fagpakker/Machine Learning/uge3/perceptron-øvet.ipynb
+++ b/fagpakker/Machine Learning/uge3/perceptron-øvet.ipynb
@@ -43,7 +43,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25\n",
       "Vores data ligger nu i x og y\n"
      ]
     }
@@ -90,10 +89,7 @@
    "outputs": [],
    "source": [
     "def prikProd(u,v):\n",
-    "    result = 0\n",
-    "    for i in range(0,len(u)):\n",
-    "        result += u[i] * v[i]\n",
-    "    return result"
+    "   "
    ]
   },
   {
@@ -120,11 +116,7 @@
    "outputs": [],
    "source": [
     "def sumList(lst1, lst2):\n",
-    "    newList = []\n",
-    "    for i in range(0,len(lst1)):\n",
-    "        newElem = lst1[i] + lst2[i]\n",
-    "        newList.append(newElem)\n",
-    "    return newList"
+    "    "
    ]
   },
   {
@@ -152,10 +144,7 @@
    "outputs": [],
    "source": [
     "def gangList(n,lst):\n",
-    "    newLst = []\n",
-    "    for x in lst:\n",
-    "        newLst.append(n*x)\n",
-    "    return newLst"
+    "  "
    ]
   },
   {
@@ -175,10 +164,7 @@
    "outputs": [],
    "source": [
     "def makeHyper():\n",
-    "    w = [1]\n",
-    "    for i in range(1,10):\n",
-    "        w.append(randint(1,10))\n",
-    "    return w"
+    " "
    ]
   },
   {
@@ -201,9 +187,7 @@
    "outputs": [],
    "source": [
     "def update(w,x,y):\n",
-    "    wNew = gangList(y,x)\n",
-    "    wNew = sumList(w,wNew)\n",
-    "    return wNew"
+    "   "
    ]
   },
   {
@@ -227,11 +211,7 @@
    "outputs": [],
    "source": [
     "def hypo(w, x):\n",
-    "    prik = prikProd(w,x)\n",
-    "    val = 1\n",
-    "    if(prik < 0):\n",
-    "        val = -1\n",
-    "    return val"
+    "   "
    ]
   },
   {
@@ -247,7 +227,13 @@
     "2. Tjek om vores nuværende hypotese giver nogle forkerte markinger\n",
     "    a. Hvis det er tilfældet så opdater vektoren så den markerer punktet rigtigt. \n",
     "3. Forsæt med trin 2 indtil der ikke er nogle forkerte markerede punkter. \n",
-    "4. Retuner w."
+    "4. Retuner w.\n",
+    "\n",
+    "_______________\n",
+    "_______________\n",
+    "\n",
+    "Hej du der har valgt den øvet version, pas meget på med den while løkke du skal lave om lidt, \n",
+    "hvis den kører uendeligt dræber du serveren for alle"
    ]
   },
   {
@@ -259,33 +245,22 @@
    "outputs": [],
    "source": [
     "def findWeight(x,y):\n",
-    "    w = makeHyper()\n",
-    "    wasWrong = True\n",
-    "    j = 1\n",
-    "    while(wasWrong == True):\n",
-    "        wasWrong = False\n",
-    "        for i in range(len(x)):\n",
-    "            if(hypo(w,x[i]) != y[i]):\n",
-    "                w = update(w,x[i],y[i])\n",
-    "                #print \"Iteration nummer \", j\n",
-    "                j += 1\n",
-    "                #print \"w er \", w\n",
-    "                wasWrong = True\n",
-    "    return w"
+    "    # "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[201, -24, 38, -45, -98, 59, 15, -1, -21, 90]\n"
+      "[238, -32, 52, -48, -94, 59, 15, -5, -31, 93]\n"
      ]
     }
    ],
@@ -298,8 +273,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vi kan nu selv bestemme markinger til nye patienter, prøv f.eks. at teste med dem her"
+    "Vi kan nu selv bestemme markinger til nye patienter, lad os teste hvor god vores funktion er!\n",
+    "kald funktionen data.calcError(w) og se hvor god den er. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Algoritmen ramte forkert:  22  gange\n",
+      "Algoritmen ramte rigtigt:  53  gange\n",
+      "Det giver en succesrate paa  70.6666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "err = data.calcError(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
