--- a/fagpakker/Machine Learning/uge3/dataAnalyse.tex
+++ b/fagpakker/Machine Learning/uge3/dataAnalyse.tex
@@ -307,10 +307,10 @@
 
     \begin{frame}[t]{Afslutning}
     \begin{block}{Hvor god er den? }
-        I opgaverne kigger i kun på alert{25 eksempler!} og tester på 75
+        I opgaverne kigger i kun på \alert{25 eksempler!} og tester på 75
         patienter \\
         \pause
-        I kan forvente at den har ret på cirka $60-70\%$ af patienterne!.
+        I kan forvente at den har ret på cirka $60-70\%$ af patienterne!.\\
         \pause
         Kører man den istedet med 500 eksempler og tester på 180. \pause
         Rammer den rigtigt 181 gange og forkert 2 gange. Det betyder at den
