--- a/fagpakker/Machine Learning/uge3/dataAnalyse.tex
+++ b/fagpakker/Machine Learning/uge3/dataAnalyse.tex
@@ -36,7 +36,7 @@
  \section{Hvad er Machine Learning}
      \begin{frame}[t]{Hvad er Machine Learning}
          \begin{block}{Problemstilling}
-             Vi indsamler stører og stører mængder af data hele tiden, så meget
+             Vi indsamler større og større mængder af data hele tiden, så meget
              at det har fået sit eget buzzword \alert{Big Data}. \\
              \pause
              Vi mennesker kan ikke overskue så store mængder af data
@@ -95,18 +95,18 @@
         \end{quote}
         \pause
         \begin{block}{Problemstilling}
-            Vi skal lave et system der givet data om en patient kan bestemme
+            Vi skal lave et system der, givet data om en patient, kan bestemme
             om deres svulst er godartet eller ondartet.
         \end{block}
         \pause
         \centering Hmm, det var da et ret generelt problem $\dots$
         \pause
         \begin{block}{Problemstilling}
-            Vi skal lave et system der givet data om en \alert{kunde} og
+            Vi skal lave et system der, givet data om en \alert{kunde},
             kan bestemme om det er en god forretning at låne dem penge.
         \end{block}
         \pause
-        \centering Problemet hedder klasseficering, gode løsninger kan have stor
+        \centering Problemet hedder klassificering, gode løsninger kan have stor
         indflydelse inden for mange felter.
     \end{frame}
 
@@ -204,7 +204,7 @@
 
     \begin{frame}[t]{Valget af lærings-algoritmen}
         \begin{block}{Perceptron}
-            Den laver et \emph{hyperplan} der adskiler data'en og finder en
+            Den laver et \emph{hyperplan} der adskiller data'en og finder en
             opdeling der giver en \alert{lav fejl}. \\
             \pause
             Tænk på den som en form for lineær regression på steroider
@@ -247,7 +247,7 @@
     \begin{frame}[t]{Hvordan den lærer}
         \begin{block}{Hvordan $w$ bestemmes}
             \pause
-            $$w = \text{ vælg tilfæledige tal}$$
+            $$w = \text{ vælg tilfældige tal}$$
             \pause
             Vi forbedrer $w$ hver gang!\\ \pause
             Hvis $x'$ er på den forkerte side af $w$ så lærer den ``erfaringen''
