--- a/fagpakker/Machine Learning/heldags/andenTime.tex
+++ b/fagpakker/Machine Learning/heldags/andenTime.tex
@@ -37,7 +37,7 @@ Christopher Mulvad Groot\\
 
 \begin{frame}
     \frametitle{Program for idag}
-    \begin{block}{Uge 1}
+    \begin{block}{1.\ time}
         \begin{itemize}
             \item Introduktion til algoritmer.
             \item Algoritme design og metoder.
@@ -45,13 +45,13 @@ Christopher Mulvad Groot\\
             \item Øvelser i algoritmer.
         \end{itemize}
     \end{block}
-    \begin{block}{Uge 2}
+    \begin{block}{2.\ time}
         \begin{itemize}
             \item \alert{Introduktion til Programmering.}
             \item \alert{Programmerings øvelser.}
         \end{itemize}
     \end{block}
-    \begin{block}{Uge 3}
+    \begin{block}{3.\ time}
         \begin{itemize}
             \item Databehandling med Machine Learning.
             \item Øvelser i dataanalyse.
