--- a/fagpakker/Machine Learning/gymKonf/øvelser/perceptron-expert.ipynb
+++ b/fagpakker/Machine Learning/gymKonf/øvelser/perceptron-expert.ipynb
@@ -96,10 +96,7 @@
    "outputs": [],
    "source": [
     "def prikProd(vec1,vec2):\n",
-    "    result = _tal\n",
-    "    for index in range(_star, _slut): \n",
-    "        result += _et_produkt \n",
-    "    return result"
+    "    # Returner prikprodutket af vec1 og vec2"
    ]
   },
   {
@@ -148,11 +145,7 @@
    "outputs": [],
    "source": [
     "def sumList(vec1, vec2):\n",
-    "    newList = []\n",
-    "    for index in range(_start, _slut):\n",
-    "        newElem = _summen_af_de_i'te_elementer\n",
-    "        newList.append(_det_næste_element)\n",
-    "    return newList"
+    "    # Retuner en liste med den parvise sum af vec1 og vec2"
    ]
   },
   {
@@ -194,10 +187,7 @@
    "outputs": [],
    "source": [
     "def gangList(n,vec):\n",
-    "    newLst = []\n",
-    "    for index in range(0,_liste):\n",
-    "        newLst.append(_produkt) \n",
-    "    return newLst"
+    "    # Retuner en liste med elementerne n* vec_1, n *vec_2, ... , n*vec_10"
    ]
   },
   {
@@ -239,11 +229,7 @@
    "outputs": [],
    "source": [
     "def makeHyper():\n",
-    "    w = [1]\n",
-    "    for i in range(1,10):\n",
-    "        tal = randint(_nedre,_øvre)\n",
-    "        w.append(tal)\n",
-    "    return w"
+    "    # retuner en liste der starter med 1 efterfulgt af 9 tilfældige tal mellem 1 og 10"
    ]
   },
   {
@@ -280,9 +266,8 @@
    "outputs": [],
    "source": [
     "def update(w,x,y):\n",
-    "    wNew = _to_lister_ganget_sammen\n",
-    "    wNew = _to_liste_lagt_sammen\n",
-    "    return wNew"
+    "    # Brug dine funktioner til at retunere w + y * x hvor w,x er vektorere og y er et tal\n",
+    "    "
    ]
   },
   {
@@ -306,11 +291,7 @@
    "outputs": [],
    "source": [
     "def hypo(w, x):\n",
-    "    prik = _prik_produktet\n",
-    "    val = 1\n",
-    "    if(prik < _noget): \n",
-    "        val = -1\n",
-    "    return val"
+    "    # returner 1 hvis prikproduktet af w og x er større eller ligmed 0, eller retuner -1"
    ]
   },
   {
@@ -338,6 +319,7 @@
    "outputs": [],
    "source": [
     "def findWeight(x,y):\n",
+    "    # Tjek beskrivelsen ovenfor\n",
     "    w = _et_hyper_plan\n",
     "    isLearning = True\n",
     "    while(isLearning == True):\n",
