--- a/fagpakker/Machine Learning/gymKonf/øvelser/perceptron_Begynder.ipynb
+++ b/fagpakker/Machine Learning/gymKonf/øvelser/perceptron_Begynder.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Studiepraktik dag 3\n",
+    "# Gymnasiekonference\n",
     "## Machine Learning\n",
     "#### Perceptron Algortimen"
    ]
@@ -21,8 +21,14 @@
     "* Find vægt vektoren - Der givet input data retunerer en vægt vektor. \n",
     "    * Lav hyperplans funktion - Laver et tilfældigt hyperplan i 10 diminsioner \n",
     "    * Lav opdateringsfunktion. - Givet en vægt vektor, en x vektor og et y label skal den\n",
-    "      retunere en opdateret vægt vektor\n",
-    "* Evt en tegn graf funktion. "
+    "      retunere en opdateret vægt vektor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Har du trykket make a file>make a copy?"
    ]
   },
   {
@@ -34,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -43,12 +49,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25\n",
       "Vores data ligger nu i x og y\n"
      ]
     }
    ],
    "source": [
+    "# Her skal du ikke gøre noget, men læs koden igennem\n",
     "import data\n",
     "from random import randint\n",
     "# Lets get the data\n",
@@ -83,7 +89,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def prikProd(vec1,vec2):\n",
+    "    # Vi har ikke regnet noget ud endnu så hvad kunne vi sætte tallet til?\n",
+    "    result = _tal\n",
+    "    for index in range(_star, _slut): # Hint: du kan få længden af en liste med len(listeNavn)\n",
+    "        result += _et_produkt # Hint: du kan få et et tal ud af en liste med listeNavn[index]\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -92,20 +114,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11\n"
+      "Tallet skulle være x og det var -12\n"
      ]
     }
    ],
    "source": [
-    "def prikProd(u,v):\n",
-    "    result = 0\n",
-    "    for i in range(0, len(u)):\n",
-    "        result += u[i] * v[i]\n",
-    "    return result\n",
-    "\n",
-    "a = [1,2]\n",
-    "b = [3,4]\n",
-    "print prikProd(a,b)"
+    "# Lad os teste om den virker\n",
+    "a = [1,2,3]\n",
+    "b = [-4,5,-6]\n",
+    "print \"Tallet skulle være -12 og det var \" + str(prikProd(a,b)) "
    ]
   },
   {
@@ -131,12 +148,26 @@
    },
    "outputs": [],
    "source": [
-    "def sumList(lst1, lst2):\n",
+    "def sumList(vec1, vec2):\n",
     "    newList = []\n",
-    "    for _ting in range(_start, _slut):\n",
+    "    for index in range(_start, _slut):\n",
     "        newElem = _summen_af_de_i'te_elementer\n",
     "        newList.append(_det_næste_element)\n",
     "    return newList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Lad os teste om den virker\n",
+    "a = [1,2,3]\n",
+    "b = [4,5,6]\n",
+    "print \"Tallet skulle være 21 og det var \" + str(sumList(a,b)) "
    ]
   },
   {
@@ -157,17 +188,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def gangList(n,lst):\n",
+    "def gangList(n,vec):\n",
     "    newLst = []\n",
-    "    for _tal in _liste:\n",
-    "        newLst.append(_produkt)\n",
+    "    for index in range(0,_liste):\n",
+    "        newLst.append(_produkt) #Hint append indsætter et i parentesen i en liste\n",
     "    return newLst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Listen skulle være 2,4,6 og det var [2, 4, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lad os teste om den virker\n",
+    "a = [1,2,3]\n",
+    "b = 2\n",
+    "print \"Listen skulle være 2,4,6 og det var \" + str(gangList(b,a))"
    ]
   },
   {
@@ -195,6 +248,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Kan vil lave en random liste\n",
+    "print makeHyper()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -202,7 +267,9 @@
     "Givet en vægt vektor (w) en data vektor(x) den har market forkert og den rigtige markeing (y) skal den opdatere vægt vektoren så den lærer fra sin fejl. \n",
     "\n",
     "Det skal gøres såldes\n",
-    "w = w + y * x"
+    "w = w + y * x\n",
+    "\n",
+    "Vink, du har lavet funktioner til dette"
    ]
   },
   {
@@ -214,6 +281,7 @@
    "outputs": [],
    "source": [
     "def update(w,x,y):\n",
+    "    # Hint: Brug de funktioner du lige har lavet\n",
     "    wNew = _to_lister_ganget_sammen\n",
     "    wNew = _to_liste_lagt_sammen\n",
     "    return wNew"
@@ -240,9 +308,9 @@
    "outputs": [],
    "source": [
     "def hypo(w, x):\n",
-    "    prik = prik_produktet\n",
+    "    prik = _prik_produktet\n",
     "    val = 1\n",
-    "    if(prik < _noget):\n",
+    "    if(prik < _noget): # Hint: hvornår er noget negativt?\n",
     "        val = -1\n",
     "    return val"
    ]
@@ -273,13 +341,13 @@
    "source": [
     "def findWeight(x,y):\n",
     "    w = _et_hyper_plan\n",
-    "    wasWrong = True\n",
-    "    while(wasWrong == True):\n",
-    "        wasWrong = False\n",
+    "    isLearning = True\n",
+    "    while(isLearning == True):\n",
+    "        isLearning = False\n",
     "        for i in range(len(x)):\n",
-    "            if(_hypo != _markering):\n",
-    "                w = _updateret_w\n",
-    "                wasWrong = True\n",
+    "            if(_hypo != _rigtig_svar): #Hint: hvad er y? \n",
+    "                w = _updateret_w \n",
+    "                isLearning = True\n",
     "    return w"
    ]
   },
@@ -300,7 +368,7 @@
    ],
    "source": [
     "w =  findWeight(xs,ys)\n",
-    "print w"
+    "print \"Du har lavet hjernevektoren: \", w"
    ]
   },
   {
@@ -318,7 +386,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Tryk play og se din succesrate\n",
+    "data.calcError(w)"
+   ]
   }
  ],
  "metadata": {
